# Cinema-Ticket-Booking

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  run.sh
adapters/: redis.py
handlers/: __init__.py  booking.py
schemas/: booking.py
services/: booking.py  redis.py
static/: index.html
store/: redis.py
tests/: conftest.py  test_concurrency.py  test_confirm_seat.py  test_hold_seat.py  test_release_seat.py
