[project]
name = "cinema-ticket-booking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "redis[hiredis]>=7.4.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v -ra -s"
# testpaths = ["tests"]
testpaths = [
    "tests/test_hold_seat.py",
    "tests/test_confirm_seat.py",
    "tests/test_release_seat.py",
    "tests/test_concurrency.py",
]
markers = [
    "integration: marks tests that require external services",
]